--- a/index.html
+++ b/index.html
@@ -3,7 +3,46 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Welcome Back</title>
   </head>
-  <body></body>
+  <body>
+    <div class="login-page">
+      <div class="box">
+        <div class="img-area">
+          <div class="img"></div>
+          <h1 style="color: white">
+            Welcome <br />
+            back!
+          </h1>
+        </div>
+        <div class="form">
+          <h1>Login</h1>
+          <form>
+            <div class="form-group">
+              <input
+                type="text"
+                placeholder="username@gmail.com"
+                class="form-control"
+              />
+            </div>
+            <div class="form-group">
+              <input
+                type="password"
+                placeholder="Password"
+                class="form-control"
+              />
+            </div>
+            <div class="form-group">
+              <label>
+                <input type="checkbox" />
+                Remember Me
+              </label>
+            </div>
+            <button type="button" class="btn">Login</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
